--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -1,5 +1,5 @@
 !!!
-%htmlo
+%html
   %head
     %meta{:charset => "utf-8"}
       %title Sample Deployment
@@ -24,7 +24,7 @@
         }
     %body
     %div{:align => "center"}
-      %h1 Cungratulations!
+      %h1 Congratulations!
       %h2 You have successfully completed the second tutorial for AWS CodePipeline.
       %p
         For next steps, read the
